deployment_mongo_express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-dep
  labels: 
    app: mongo-express
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          ports:
            - containerPort: 8081
