Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-dep-service
  labels: 
    app: mongodb
spec:
  selector: 
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
