express_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector: 
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8081
  type: ClusterIP
