express_service_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service-lb
spec:
  selector: 
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer
